invalidation of locking for write tables (BUG#2693) fixed linking query_prealloc_size to query cache presence